--- a/weatherdo.html
+++ b/weatherdo.html
@@ -5,49 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="weatherdo.css">
 </head>
-<style>
 
- iframe{
-   float:right;
-   margin-right:70px;
-   margin-top: 20px;
- }
- #container{
-   display: flex;
-   flex-direction: column;
-   height:500px;
-   width:500px;
- 
-   margin-top: 20px;
-   background-color: rgb(211, 122, 14);
- }
-#tempDiv{
-  
-  height: 500px;
-  width:450px;padding: 5px;
-  /* text-align: center; */
-  margin-left: 40px;
-  color: white;
-
-}
-#forecast{
-  display: flex;
-  border:1px solid green;
-  height:240px;
-  width:780px;
-  gap:20px;
-  margin-top: 20px;
-  margin-left: 40px;
-  font-size: 20px;
-  background-color:#282828;
-  color:white;
-  text-align: center;
-  padding-left: 20px;
-}
-
-
-</style>
 
 <body>
 
