--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="weatherdo.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 
@@ -44,4 +44,4 @@
 </html>
 
 
-<script src="weatherdo.js"></script>
+<script src="index.js"></script>
